Pushing Armenian changes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103244 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hy-AM/snippets.lang
+++ b/hy-AM/snippets.lang
@@ -26,94 +26,68 @@
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-
-
-;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-
-
-;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-
-
-;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-
-
+<a href="%s">Դարձիր Firefox-ի մասնակից</a> և ձեռք բե՛ր անհրաժեշտ ամեն ինչ  Firefox-ը աշխարհում տարածելու համար:
+  
+;Firefox is proudly non-profit and free to innovate on your behalf  without compromise. <a href="%s">Learn more</a> about our  mission.
+Firefox-ը շահույթ չի հետապնդում և այն կարող է նորացվել Ձեր կողմից առանց նախապայմանների: <a href="%s">Տեղեկացեք ավելին</a>մեր առաքելության մասին:
+  
+;Fast, flexible and secure, Firefox is the only browser that puts you  first. <a href="%s">Learn more</a> about what makes us  different by design.
+Արագ, ճկուն և անվտանգ, Firefox-ը միակ դիտարկիչն է, որ Ձեզ առաջինն է դարձնում: <a href="%s">Տեղեկացեք ավելին</a> այն մասին, թե ինչն է մեր դիզայնը տարբերակված դարձնում: 
+  
+;<a href="%s">Download Firefox on your Android tablet</a>  and put the power of the Web right in your hands. Get it now.
+<a href="%s">Բեռնեք Firefox-ը Ձեր Android սարքում</a> և ցանցի հզորությունը կհայտնվի Ձեր ձեռքերում: Ձեռք բեր այն հիմա: 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-
-
+Ձեր օժանդակիչները թարմացված պահեք և անվտանգությունն ապահովեք առցանց<a href="%s">Ստուգել Օժանդակիչ</a>-ի հետ:
+  
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-
-
-;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-
-
-;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-
-
-;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-
-
+Ձեր Firefox-ի ոճը պահեք: Այն զարդարեք վերջին  <a href="%s">Դիզայն</a>-ով:
+;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>
+Չափազանց շա՞տ են ներդիրները: Վերականգնեք Ձեր դիտարկիչը խառնաշփոթ վիճակից <a href="%s">Panorama</a> -ի միջոցով:
+  
+;No two Firefox users are alike. <a href="%s">Add any button to  your browser</a> or remove the ones you don't use. Right-click on  home and select Customize.
+Firefox օգտագործողները տարբեր են: <a href="%s">Ավելացրու ցանկացած կոճակ քո դիտարկիչին</a> կամ հեռացրու այն կոճակները, որոնցից դու չես օգտվում: Աջ սեղմում կատարեք  Մեկնարկային էջի վրա և ընտրեք Կարգավորել:
+  
+;Dress up your Firefox with Personas. Roll over to try, click to apply.  Or visit the <a href="%s">gallery</a> for thousands more!
+Զարդարեք Ձեր Firefox-ը  Դիզայն-ի միջոցով: Պտտացրեք՝ փորձելու համար, սեղմեք՝ կիրառելու համար: Կամ այցելեք  <a href="%s">պատկերասրահ</a>՝ հազարավոր այլ ձևերի համար:
+  
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-
-
+Նախ նայեք վերջին առանձնահատկություններին, նույնիսկ նախքան նրանք Բետայում կկիրառվեն: <a href="%s">Բեռնեք Firefox Ավրորան</a>:
+  
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-
-
+<a href="%s">Բեռնեք Firefox Ավրորան </a>՝ փորձարկելու համար առանձնահատկությունները և մեզ օգնելու համար որոշել, թե ինչ առավելություն ունի այն   Բետայի համար:.
+  
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-
-
-;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-
-
-;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-
-
-;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-
-
-;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-
-
-;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-
-
+Շուտ միացեք և օգնեք ձևավորել Firefox-ի ապագան: <a href="%s">Բեռնե՛ք Ավրորան</a>:
+  
+;Firefox for Android is now optimized for the way you browse on tablets.  <a href="%s">Get the power of the Web at your  fingertips</a>.
+Firefox-ը Android-ի համար այժմ հարմարեցված է թաբլեթների համար:  <a href="%s">Դարձրու ցանցի հզորությունը քեզ շատ մոտ:</a>.
+  
+;Download Firefox on your Android tablet and put the power of the Web  right in your hands. <a href="%s">Get it now</a>.
+Բեռնիր Firefox-ը քո Android թաբլեթում և ցանցի հզորությունը կհայտնվի հենց քո ձեռքերում: <a href="%s">Ձեռք բեր այն հիմա</a>:
+  
+;<a href="%">Download Firefox Beta</a>, provide feedback and  help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Բեռնիր Firefox Բետան</a>, արձագանքիր և օգնիր դարձնել հաջորդ Firefox-ը շատ ավելի կատարյալ մեր 450 միլիոն օգտվողների համար:
+;Test features, refine and polish them and help us make our next version  better than ever. <a href="%">Download Firefox Beta  today!</a>
+Փորձարկեք հնարավորությունները և օգնեք մեզ էլ ավելի լավը դարձնելու հաջորդ տարբերակը։ <a href="%">Բեռնեք Firefox Բետան հենց այսօր!</a>
+  
+;Love Firefox? Want to help make our next version even better? <a  href="%">Download Firefox Beta</a> and give us feedback today!
+Սիրու՞մ եք Firefox-ը։ Ցանկանու՞մ եք օգնել մեզ հաջոդ տարբերակը էլ ավելի լավացնելու համար։ <a  href="%">Բեռնեք Firefox Բետան</a> և հայտնեք Ձեր կարծիքը!
+  
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-
-
-;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-
-
-;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-
-
-;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-
-
-;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-
-
-;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-
+Դուք օգտագործու՞մ եք Firefox-ի վերջին Բետան։<a href="%">Բեռնեք հենց հիմա</a> և օգնեք մեզ փորձարկելու վերջին հնարավորությունները։
+  
+;Not on the latest Firefox Beta? <a href="%">Get it  today</a> to stay on top of what we're working on for our next  version.
+Չունե՞ք Firefox-ի վերջին Բետան <a href="%">Բեռնեք հենց հիմա</a>՝  տեղեկացված լինելու համար վերջին հնարավորություններին։
+  
+;Want to share your feedback? <a href="%">Find out how</a>  and help make the next version of Firefox even more awesome.
+Ցանկանու՞մ եք տարածել Ձեր կարծիքը։ <a href="%">Ընտրեք եղանակը</a>  և օգնեք մեզ Firefox-ի հաջորդ տարբերակը էլ ավելի լավը դարձնելու։
+  
+;Firefox Beta users: Don't forget to <a href="%">provide  feedback</a> to help us put the final tweaks on our next version.
+Firefo Բետայի օգտվողները. Մի մոռացեք <a href="%">հայտնել Ձեր կարծիքը</a>՝ օգնելու համար մեզ վերացնելու նկատված վրիպակները։
+  
+;Help make the next version of Firefox even more awesome. <a  href="%">Become an Affiliate</a> and share Firefox Beta with  your friends.
+Օգնիր ստեղծել ավելի հիանալի նոր Firefox: <a  href="%">Դարձիր Գործընկեր</a> և տարածի Firefox Բետան ընկերների միջև:
+  
+;Invite friends to preview upcoming Firefox features. <a  href="%">Become an Affiliate</a> and share Firefox Aurora  today.
+Հրավիրեք ընկերներին ծանոթանալու Firefox-ի գալիք տարբերակին։ <a  href="%">Դարձեք Գործընկեր</a> և տարածեք Firefox Ավրորան։
 
