--- a/hy-AM/main.lang
+++ b/hy-AM/main.lang
@@ -382,13 +382,14 @@ Mozilla Firefox. Բերելով նոր վեբը XP:
 Նորագույն տեխնոլոգիաներ
 
 
-;You're using an old version of Firefox. Get your update to stay safe!  <br/> <a href="%s">Download the free upgrade</a> in  less than a minute for the latest features, speed and security fixes.
+;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
 Դուք  օգտագործում եք  Firefox-ի հին տարբերակը: Թարմացում կատարեք Ձեր անվտանգությունն ապահովելու համար:  <br/> <a href="%s">Բեռնեք անվճար թարմացումը</a>մեկ րոպեում՝ վերջին առանձնահատկությունների, արագության և անվտանգության   ամրապնդման համար:
   
+;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start  using your new Firefox for the best in browsing and customization on  the Web. <br/>   It’s fast and free!
 Ձեզ թարմացում է անհրաժեշտ! Անվտանգությունն ապահովեք  մեկ րոպեում:<br/>Սկսեք օգտագործել Ձեր նոր Firefox-ը ցանցում՝ լավագույն որոնման և կարգավորման համար: <br/>  Դա արագ է և անվճար! 
   
-;You're using an older version of Firefox. Get <a href="%s">your  update</a> to stay safe! <br/> Experience the latest  features, security fixes and the fastest Firefox yet. Download the free  upgrade in less than a minute.
+;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 Դուք օգտագործում եք Firefox-ի հին տարբերակը: Ձեռք բերեք <a href="%s">Ձեր թարմացումը՝ </a>անվտանգությունն ապահովելու համար։ <br/>Փորձարկեք վերջին առանձնահատկությունները, անվտագության ամրապնդումը և առայժմ անենաարագ Firefox-ը: Բեռնեք անվճար թարմացումը մեկ րոպեում: 
   
 ;Upgrade now
