--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -62,19 +62,19 @@
 Ձևաչափը
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Դու արդեն մեզ հետ ես! <span>Բայց սպասիր, Իմացի'ր ավելին</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Ցանկանու՞մ եք ստանալ լրացուցիչ տեղեկություններ։ Մի փոքր ավելին հաղորդեք մեզ Ձեր մասին։ Եվ քանի դեռ այստեղ եք, բաժանորդագրվեք Mozilla-ի նորություններին։
 
 
 ;Firefox & You
-Firefox & You
+Firefox-ը և Դուք
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Մեր այլ բաժանորդագրությունները.
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
@@ -82,26 +82,26 @@ Get the latest tips and tricks for getting the most out of your favorite browser
 
 
 ;Firefox Mobile
-Firefox Mobile
+Բջջային Firefox 
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Կարդացե՛ք Բջջային Firefox-ի վերջին հավելումների և հնարավորություների մասին մասին։
 
 
 ;Beta News
-Beta News
+Բետա նորություններ
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Կարդացեք Firefox-ի և Բջջային Firefox-ի վերջին հնարավորություների մասին՝ մինչ վերջնական թողարկումը։
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Դարձե՛ք մեր ընկերը!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox-ընաև Ձեր սիրելի սոցիալական կայքերում։ Միացե՛ք մեզ և մասնակցեք քննարկումներին։
 
 
