Commit missing strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103254 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -49,17 +49,21 @@
 Մենք անհամբեր սպասում ենք ձեզ հետ կիսվելու հնարքների և Firefox-ից ավելի լավ օգտվելու խորհուրդների մասին, ինչպես նաև հետաքրքիր նորություններ Mozilla-ի մասին և այն մասին թե ինչպես ենք մեք բարելավում վեբը:
 
 
-;Subscribe to monthly updates and keep current with Mozilla news,  including the latests tips and tricks for getting the most out of your  Firefox browser. It’s the perfect way for us to keep in touch!
+;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
 Բաժանորդագրվեք ամսական թարմացումներին և հետ մի մնացեք Մոզիլլայի նորություններից, վերջին խորհուրդներից և փորձերից` Firefox դիտարկիչը լավագույնը դարձնելու համար: Սա գերազանց միջոց է, որպեսզի մենք կապի մեջ լինենք: 
   
-;We just sent you a confirmation message by email. Click on the  confirmation link in this email to validate your subscription to this  mailing list.
+
+;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
 Մենք հենց նոր Ձեզ ուղարկել ենք հաստատման հաղորդագրություն էլեկտրոնային փոստով: Սեղմեք հաստատման հասցեն այս նամակում, որպեսզի հաստատեք Ձեր բաժանորդագրումը այս փոստի ցուցակում: 
  
+
 ;Read all about it in our <span>newsletter</span>
 Կարդացեք ամեն ինչ այդ մասին մեր  <span>նորություններ</span>-ում
   
+
 ;Format
 Ձևաչափը
+
 
 ;You’re All Set! <span>But Wait, There’s More</span>
 Դու արդեն մեզ հետ ես! <span>Բայց սպասիր, Իմացի'ր ավելին</span>
@@ -105,3 +109,25 @@ Get the latest tips and tricks for getting the most out of your favorite browser
 Firefox-ընաև Ձեր սիրելի սոցիալական կայքերում։ Միացե՛ք մեզ և մասնակցեք քննարկումներին։
 
 
+;Manage your <span>Newsletter Subscriptions
+Manage your <span>Newsletter Subscriptions
+
+
+;Subscribe
+Subscribe
+
+
+;Unsubscribe
+Unsubscribe
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Check here if you’d like to be removed from all Mozilla emails'
+
+
+;Remove me from all Mozilla emails
+Remove me from all Mozilla emails
+
+
+;Save Preferences
+Save Preferences
