--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -61,6 +61,10 @@
 Կարդացեք ամեն ինչ այդ մասին մեր  <span>նորություններ</span>-ում
   
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
+
 ;Format
 Ձևաչափը
 
