changes to newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103266 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/newsletter.lang
+++ b/es-AR/newsletter.lang
@@ -62,7 +62,7 @@ Lee todo acerca de ello en nuestro <span>boletín de noticias</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Tu suscripción al boletín de noticias fue confirmada.
 
 
 ;Format
@@ -70,23 +70,23 @@ Formato
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+¡Ya estás preparado! <span>Pero esperá, aún hay más</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+¿Querés tener la información más importante? Contanos un poc sobre vos. Y ya que estás acá, suscribite a más noticias de Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox y tú
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Nuestros otros boletines:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Conseguí los últimos consejos y trucos para obetener lo mejor de tu navegador favorito.
 
 
 ;Firefox Mobile
@@ -94,22 +94,22 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Conocé los últimos complementos y funcionalidades de Firefox mobile.
 
 
 ;Beta News
-Beta News
+Noticias Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lee acerca de las últimas funcionalidades para Firefox antes de su salida final.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+¡Seamos amigos!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox también está en tus redes sociales favoritas. Conectate con nosotros y unite a la conversación.
 
 
