Land more translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103284 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -86,7 +86,7 @@ Firefox-ը և Դուք
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Իմացեք թե ինչպես ստանալ առավելագույնը ձեր սիրված դիտարկիչից։
 
 
 ;Firefox Mobile
