[es-ES] snippets.lang localization updated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103335 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/snippets.lang
+++ b/es-ES/snippets.lang
@@ -62,7 +62,7 @@ Viste tu Firefox con Personas. Pasa el puntero para probar una, haz clic para us
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Echa un primer vistazo a las últimas características, antes incluso de que vaya a Beta. <a href="%s">Descargar Firefox Aurora.</a>
+Echa un primer vistazo a las últimas características, antes incluso de que vayan a Beta. <a href="%s">Descargar Firefox Aurora.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
@@ -82,7 +82,7 @@ Descarga Firefox en tu tableta Android y pon todo el poder de la Web en tus mano
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Descarga Firefox Beta</a>, ofrece tus opiniones y sugerencias, y haz que el próximo Firefox sea incluso más alucinante para nuestros 450 millones de usuarios.
+<a href="%">Descarga Firefox Beta</a>, da tus opiniones y sugerencias, y haz que el próximo Firefox sea incluso más alucinante para nuestros 450 millones de usuarios.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
@@ -122,5 +122,5 @@ Invita a tus amigos a que vean las características que tendrá Firefox en el fu
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
-{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
+{l10n-extra}¡Grandes premios! ¡Un jurado de estrellas de Hollywood! ¡<a href="%">Participa en Firefox Flicks</a>, el concurso mundial de vídeos para contar nuestra historia, o vota a tus favoritos!
 
