Bug 727058 - [pt-PT] Localize new firefox beta download page for desktop and mobile
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103336 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-PT/firefoxtesting.lang
+++ b/pt-PT/firefoxtesting.lang
@@ -2,15 +2,15 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Transferir o Firefox Beta para Android - Gratuito
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+Transferir o Firefox Beta para Desktop - Gratuito
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Download and test Firefox future releases. Experimente as últimas inovações com as versões Aurora e Beta.
 
 
 ;Firefox Beta
@@ -18,42 +18,42 @@ Firefox Beta
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta para:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta para Mobile
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Transfira a Beta e faça parte da próxima versão do Firefox.
 
 
 ;1. Test Features
-1. Test Features
+1. Funcionalidade sem teste
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+Experimente os últimos melhoramentos em desempenho, personalização e segurança quase prontos para a utilização geral.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Refinar &amp; Polir
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Preencha bugs para nos ajudar a colocar os últimos tweaks sobre desempenho e funcionalidade num ambiente estável.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. Faça a sua parte
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Tenha impacto na próxima versão do Firefox e de 450 milhões de pessoas que o usam todos os dias.
 
 
 ;Supported devices
-Supported devices
+Dispositivos suportados
 
 
