adding lines to newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103343 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/newsletter.lang
+++ b/es-AR/newsletter.lang
@@ -90,7 +90,7 @@ Conseguí los últimos consejos y trucos para obetener lo mejor de tu navegador 
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
@@ -112,4 +112,20 @@ Lee acerca de las últimas funcionalidades para Firefox antes de su salida final
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox también está en tus redes sociales favoritas. Conectate con nosotros y unite a la conversación.
 
+;Manage your <span>Newsletter Subscriptions
+Administrá tus <span>suscripciones a los boletínes
 
+;Subscribe
+Suscribite
+
+;Unsubscribe
+Desuscribite
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Aceptá acá si querés ser removido de los correos de Mozilla
+
+;Remove me from all Mozilla emails
+Quitarme de todos los correos de Mozilla
+
+;Save Preferences
+Guardar las preferencias
