el (Greek) translation for the latest strings in newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103381 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/newsletter.lang
+++ b/el/newsletter.lang
@@ -121,7 +121,7 @@ Firefox για κινητά
 ;Unsubscribe
 Διαγραφή
 
-;Check here if you’d like to be removed from all Mozilla emails
+;Check here if you’d like to be removed from all Mozilla emails'
 Επιλέξτε το αν θέλετε να διαγράψετε τη συνδρομή σας από όλα τα δελτία νέων του Mozilla
 
 ;Remove me from all Mozilla emails
