--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -110,3 +110,22 @@ Legyünk barátok!
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 A Firefox megtalálható a legtöbb közösségi oldalon. Csatlakozzon hozzánk.
+
+;Manage your <span>Newsletter Subscriptions
+;Feliratkozások <span>kezelése
+
+
+;Subscribe
+Feliratkozás
+
+;Unsubscribe
+Lemondás
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Válassza ezt, ha minden Mozilla e-mailről le szeretne iratkozni
+
+;Remove me from all Mozilla emails
+Leiratkozás az összes Mozilla e-mailről 
+
+;Save Preferences
+Beállítások mentése
