Add identical tag to lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103393 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/firefoxtesting.lang
+++ b/hu/firefoxtesting.lang
@@ -14,7 +14,7 @@ Töltse le és próbálja ki a következő Firefox verziót. Ismerje meg a legú
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok} 
 
 
 ;Firefox Beta for:
@@ -22,7 +22,7 @@ Firefox Beta:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta for Mobile {ok} 
 
 
 ;Download Beta and be part of the next version of Firefox.
