--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -89,7 +89,7 @@ Ismerje meg a legújabb tippeket és trükköket és hozza ki a legtöbbet a ked
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok} 
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
