--- a/cs/newsletter.lang
+++ b/cs/newsletter.lang
@@ -62,7 +62,7 @@ Přečtěte si o všem v našem <span>zpravodaji</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Vaše přihlášení k odběru zpravodaje bylo potvrzeno.
 
 
 ;Format
@@ -78,15 +78,15 @@ Want to get the most relevant info? Tell us a little more about yourself. And wh
 
 
 ;Firefox & You
-Firefox & You
+Firefox a vy
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Naše ostatní zpravodaje:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Získejte nejnovější tipy a triky a získejte tak ze svého oblíbeného prohlížeče ještě více.
 
 
 ;Firefox Mobile
@@ -112,4 +112,20 @@ Let’s Be Friends!
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
+;Manage your <span>Newsletter Subscriptions
+Správa <span>odběru zpravodajů
 
+;Subscribe
+Přihlásit
+
+;Unsubscribe
+Odhlásit
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Zaškrtněte, pokud chcete, aby byly zrušeny všechny odběry e-mailů od Mozilly 
+
+;Remove me from all Mozilla emails
+Zrušit odběr všech e-mailů od Mozilly
+
+;Save Preferences
+Uložit předvolby
