--- a/pt-BR/newsletter.lang
+++ b/pt-BR/newsletter.lang
@@ -1,115 +1,86 @@
 # These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 
-
 ;Get Monthly News
 Receba notícias mensalmente
-
 
 ;Your Email Address
 Seu endereço de email
 
-
 ;Text
 Texto
-
 
 ;Available Languages
 Idiomas disponíveis
 
-
 ;Select country
 Selecione seu país
-
 
 ;Whoops! Be sure to enter a valid email address.
 Ops! Confira se você inseriu um endereço de e-mail válido.
 
-
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
 Por favor, leia a Política de Privacidade da Mozilla a aceite marcando a caixa.
-
 
 ;I agree to the <a href="%s">Privacy Policy</a>
 Eu concordo com a <a href="%s">Política de Privacidade</a>
 
-
 ;Sign me up!
 Inscrever!
-
 
 ;We will only send you Mozilla-related information.
 Nós enviaremos somente informações relacionadas à Mozilla.
 
-
 ;Thanks for Subscribing!
 Obrigado por inscrever-se!
-
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
 Queremos compartilhar em breve dicas e truques para obter o máximo do seu Firefox, além de novidades empolgantes sobre a Mozilla e como estamos trabalhando para criar uma Internet melhor.
 
-
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
 Receba atualizações mensais e mantenha-se sempre informado sobre as novidades da Mozilla, inclusive dicas e truques para tirar o máximo proveito do seu navegador Firefox. É a forma ideal de nos comunicarmos!
-
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
 Confira a sua caixa de entrada: deve ter recebido uma mensagem de confirmação. Basta clicar no link de confirmação contido no e-mail para começar a receber as notícias da Firefox & Você.
 
-
 ;Read all about it in our <span>newsletter</span>
 Saiba tudo sobre a Mozilla com <span>nossa newsletter</span>
 
-
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
-
+Sua assinatura da nossa newsletter foi confirmada.
 
 ;Format
 Formato
 
-
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
-
+Tudo pronto! <span>Mas espere, Tem mais</span>
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-
+Que receber as informações mais relevantes? Conte-nos um pouco mais sobre si mesmo. E enquanto você está aqui, inscreva-se para a notícia Mozilla outro.
 
 ;Firefox & You
-Firefox & You
-
+Firefox e Você
 
 ;Our Other Newsletters:
-Our Other Newsletters:
-
+Nossas outras Newsletters:
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
-
+Receba as dicas e truques mais recentes para tirar o máximo do seu navegador favorito.
 
 ;Firefox Mobile
-Firefox Mobile
-
+Firefox Móvel
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
-
+Saiba mais sobre os mais quentes complementos e recursos do Firefox Móvel.
 
 ;Beta News
-Beta News
-
+Notícias Beta
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
-
+Leia mais sobre os recursos mais recentes do Firefox Móvel e Desktop antes da vesão final.
 
 ;Let’s Be Friends!
-Let’s Be Friends!
-
+Vamos ser Amigos!
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-
+O Firefox também está nas suas redes sociais favoritas. Conecte-se a nós e entre na conversa.
 
