--- a/ast/download.lang
+++ b/ast/download.lang
@@ -7,7 +7,7 @@ Distintu por diseñu
 
 
 ;Proudly <span>non-profit</span>
-<span>Ensin ánimu de llucru</span> y arguyosos de selo
+<span>Ensin ánimu de llucru</span> y arguyosos d'ello
 
 
 ;Innovating <span>for you</span>
@@ -15,7 +15,7 @@ Innovando <span>pa ti</span>
 
 
 ;Fast, flexible, <span>secure</span>
-Rápidu, flexible, <span>seguro</span>
+Rápidu, flexible, <span>seguru</span>
 
 
 ;Thanks for choosing Firefox!
