End of Mar 12 changes in the newsletter.lang file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103458 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/newsletter.lang
+++ b/csb/newsletter.lang
@@ -70,46 +70,45 @@ Fòrmat
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Jes ju fardich! <span>Czekôjże, mòże dëcht jesz ni</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Brëkùjesz przënôléżnëch jinfòrmacji? Rzekni nama përznã wicy ò se. A że ju jes na ti stronie, zapiszë sã téż na jiné wëdowiédzë òd Mozillë.
 
 
 ;Firefox & You
-Firefox & You
+Firefox ë Të
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Naszé jiné òbznajmniczi:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Przezdrzi nônowszé pòradë ë wskôzczi, żebë wëdostac jak nôwicy zs swòjégò ùlubionégò przezérnika.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Mòbilny Firefox
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Wëdowiédzë sã wicy ò nowëch dodôwkach ë fùnkcjach dlô mòbilnégò Firefoksa.
 
 
 ;Beta News
-Beta News
-
+Jinfòrmacje ò wersji Beta
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Czëtôj ò nônowszëch fùnkcjach kòmpùtrowégò ë mòbilnégò Firefoksa, nigle sã pòkażą jich finalné wersje.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Zdrëszëjmë sã!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefoksa jidze téż nalezc na Twòjich ùlubionëch pòrtalach spòlëznowëch. Sparłãczë sã z nama ë przëłączë do òbgôdczi.
 
 
