--- a/ast/download.lang
+++ b/ast/download.lang
@@ -7,11 +7,11 @@ Distintu por diseñu
 
 
 ;Proudly <span>non-profit</span>
-<span>Ensin ánimu de llucru</span> y arguyosos d'ello
+<span>Ensin ánimu de llucru</span>
 
 
 ;Innovating <span>for you</span>
-Innovando <span>pa ti</span>
+Innovamos <span>pa ti</span>
 
 
 ;Fast, flexible, <span>secure</span>
