--- a/ms/newsletter.lang
+++ b/ms/newsletter.lang
@@ -1,3 +1,5 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+
 ;Get Monthly News
 Get Monthly News
 
@@ -56,5 +58,68 @@ We just sent you a confirmation message by email. Click on the confirmation link
 Read all about it in our <span>newsletter</span>
 
 
+;Your newsletter subscription has been confirmed.
+Your newsletter subscription has been confirmed.
+
 ;Format
 Format
+
+;You’re All Set! <span>But Wait, There’s More</span>
+You’re All Set! <span>But Wait, There’s More</span>
+
+
+;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+
+;Firefox & You
+Firefox & You
+
+;Our Other Newsletters:
+Our Other Newsletters:
+
+;Get the latest tips and tricks for getting the most out of your favorite browser.
+Get the latest tips and tricks for getting the most out of your favorite browser.
+
+;Firefox Mobile
+Firefox Mobile
+
+;Learn about the hottest new add-ons and features for Firefox mobile.
+Learn about the hottest new add-ons and features for Firefox mobile.
+
+;Beta News
+Beta News
+
+;Read about the latest features for Firefox desktop and mobile before the final release.
+Read about the latest features for Firefox desktop and mobile before the final release.
+
+
+;Let’s Be Friends!
+Let’s Be Friends!
+
+
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+
+
+;Manage your <span>Newsletter Subscriptions
+Manage your <span>Newsletter Subscriptions
+
+
+;Subscribe
+Subscribe
+
+
+;Unsubscribe
+Unsubscribe
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Check here if you’d like to be removed from all Mozilla emails'
+
+
+;Remove me from all Mozilla emails
+Remove me from all Mozilla emails
+
+
+;Save Preferences
+Save Preferences
