l10n: add more newsletter strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103486 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/newsletter.lang
+++ b/ff/newsletter.lang
@@ -113,3 +113,27 @@ En kalfondirii koye men!
 Firefox ena woni kadi e lowe maa laylayte renndo ɓurɗe labeede. Seŋo e amen ngam naatde e yeewtere ndee.
 
 
+;Manage your <span>Newsletter Subscriptions
+Manage your <span>Newsletter Subscriptions
+
+
+;Subscribe
+Subscribe
+
+
+;Unsubscribe
+Unsubscribe
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Check here if you’d like to be removed from all Mozilla emails'
+
+
+;Remove me from all Mozilla emails
+Remove me from all Mozilla emails
+
+
+;Save Preferences
+Save Preferences
+
+
