--- a/gl/newsletter.lang
+++ b/gl/newsletter.lang
@@ -1,4 +1,4 @@
- # These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 
 
 ;Get Monthly News
@@ -111,5 +111,29 @@ Sexamos amigos!
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox tamén está nas súas redes sociais favoritas. Conecte connosco e únase a conversación.
+
+
+;Manage your <span>Newsletter Subscriptions
+Manage your <span>Newsletter Subscriptions
+
+
+;Subscribe
+Subscribe
+
+
+;Unsubscribe
+Unsubscribe
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Check here if you’d like to be removed from all Mozilla emails'
+
+
+;Remove me from all Mozilla emails
+Remove me from all Mozilla emails
+
+
+;Save Preferences
+Save Preferences
 
 
