--- a/sl/newsletter.lang
+++ b/sl/newsletter.lang
@@ -77,8 +77,6 @@ Urejeno! <span>Ampak trenutek, to še ni vse</span>
 Želite dobivati najbolj pomembne informacije? Povej nam malo več o sebi. In ko ste tukaj, se prijavite še na druge novice Mozille.
 
 
-
-
 ;Firefox & You
 Firefox in vi
 
@@ -106,6 +104,7 @@ Beta bilten
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Preberite si že pred končno objavo vse o najnovejših funkcijah v Firefox za namizne računalnike in za mobilnike.
 
+
 ;Let’s Be Friends!
 Postanimo prijatelji!
 
@@ -113,20 +112,28 @@ Postanimo prijatelji!
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox je tudi eno od vaših priljubljenih družabnih spletnih mest. Pridružite se nam pri klepetu.
 
+
 ;Manage your <span>Newsletter Subscriptions
 Urejajte svoje <span>naročnine na biltene
+
 
 ;Subscribe
 Prijava za naročnino
 
+
 ;Unsubscribe
 Odjava naročnine
 
-;Check here if you’d like to be removed from all Mozilla emails
-Odkljukajte, če se želite odjaviti od vseh poštnih naročnin pri Mozilli
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Check here if you’d like to be removed from all Mozilla emails'
+
 
 ;Remove me from all Mozilla emails
 Odjavi me od vseh naročnin pri Mozilli
 
+
 ;Save Preferences
 Shrani nastavitve
+
+
