--- a/ast/newsletter.lang
+++ b/ast/newsletter.lang
@@ -1,4 +1,4 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/ast/newsletter/new
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 
 
 ;Get Monthly News
@@ -111,3 +111,29 @@ Faite collaciu nuestru!
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox tamién ta nes tos redes sociales favorites. Coneuta con nós y xúnite a la conversación.
+
+
+;Manage your <span>Newsletter Subscriptions
+Manage your <span>Newsletter Subscriptions
+
+
+;Subscribe
+Subscribe
+
+
+;Unsubscribe
+Unsubscribe
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Check here if you’d like to be removed from all Mozilla emails'
+
+
+;Remove me from all Mozilla emails
+Remove me from all Mozilla emails
+
+
+;Save Preferences
+Save Preferences
+
+
