--- a/csb/newsletter.lang
+++ b/csb/newsletter.lang
@@ -100,6 +100,7 @@ Wëdowiédzë sã wicy ò nowëch dodôwkach ë fùnkcjach dlô mòbilnégò Fir
 ;Beta News
 Jinfòrmacje ò wersji Beta
 
+
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Czëtôj ò nônowszëch fùnkcjach kòmpùtrowégò ë mòbilnégò Firefoksa, nigle sã pòkażą jich finalné wersje.
 
@@ -110,5 +111,29 @@ Zdrëszëjmë sã!
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefoksa jidze téż nalezc na Twòjich ùlubionëch pòrtalach spòlëznowëch. Sparłãczë sã z nama ë przëłączë do òbgôdczi.
+
+
+;Manage your <span>Newsletter Subscriptions
+Manage your <span>Newsletter Subscriptions
+
+
+;Subscribe
+Subscribe
+
+
+;Unsubscribe
+Unsubscribe
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Check here if you’d like to be removed from all Mozilla emails'
+
+
+;Remove me from all Mozilla emails
+Remove me from all Mozilla emails
+
+
+;Save Preferences
+Save Preferences
 
 
