--- a/es-ES/newsletter.lang
+++ b/es-ES/newsletter.lang
@@ -113,3 +113,27 @@ Lee todo acerca de las últimas características en Firefox para escritorio y di
 Firefox está también en tus redes sociales favoritas. Conecta con nosotros y únete a la conversación.
 
 
+;Manage your <span>Newsletter Subscriptions
+Manage your <span>Newsletter Subscriptions
+
+
+;Subscribe
+Subscribe
+
+
+;Unsubscribe
+Unsubscribe
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Check here if you’d like to be removed from all Mozilla emails'
+
+
+;Remove me from all Mozilla emails
+Remove me from all Mozilla emails
+
+
+;Save Preferences
+Save Preferences
+
+
